--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             </div>
         </nav>
     </header>
+    <div class="navlinks">
+        <a href="#"><img src="https://img.icons8.com/?size=100&id=85794&format=png&color=FFFFFF" alt=""></a>
+        <a href="#"><img src="https://img.icons8.com/?size=100&id=wUB0486fVP3Z&format=png&color=FFFFFF" alt=""></a>
+        <a href="#"><img src="https://img.icons8.com/?size=100&id=BYnvGv84C52t&format=png&color=FFFFFF" alt=""></a>
+    </div>
     <section class="big-circle">
         <img src="https://i.pinimg.com/736x/d5/f7/6c/d5f76c78f00931fad9d727745749a8ed.jpg" alt="">
     </section>
@@ -34,7 +39,66 @@
             <input type="range" id="slider" min="0" max="100" value="50">
         </div>
     </section>
+    <section class="list">
+        <div class="fact">
+            <div class="updown">
+                <h2>International Badman Killa</h2>
+                <p>Runtown</p>
+            </div>
+            <div class="logo">
+                <img src="https://img.icons8.com/?size=100&id=59862&format=png&color=FFFFFF" alt="">
+            </div>
+        </div>
+        <div class="fact">
+            <div class="updown">
+                <h2>International Badman Killa</h2>
+                <p>Runtown</p>
+            </div>
+            <div class="logo">
+                <img src="https://img.icons8.com/?size=100&id=59862&format=png&color=FFFFFF" alt="">
+            </div>
+        </div>
+        <div class="fact">
+            <div class="updown">
+                <h2>International Badman Killa</h2>
+                <p>Runtown</p>
+            </div>
+            <div class="logo">
+                <img src="https://img.icons8.com/?size=100&id=59862&format=png&color=FFFFFF" alt="">
+            </div>
+        </div>
+        <div class="fact">
+            <div class="updown">
+                <h2>International Badman Killa</h2>
+                <p>Runtown</p>
+            </div>
+            <div class="logo">
+                <img src="https://img.icons8.com/?size=100&id=59862&format=png&color=FFFFFF" alt="">
+            </div>
+        </div>
+        <div class="fact">
+            <div class="updown">
+                <h2>International Badman Killa</h2>
+                <p>Runtown</p>
+            </div>
+            <div class="logo">
+                <img src="https://img.icons8.com/?size=100&id=59862&format=png&color=FFFFFF" alt="">
+            </div>
+        </div>
+        <div class="fact">
+            <div class="updown">
+                <h2>International Badman Killa</h2>
+                <p>Runtown</p>
+            </div>
+            <div class="logo">
+                <img src="https://img.icons8.com/?size=100&id=59862&format=png&color=FFFFFF" alt="">
+            </div>
+        </div>
+    </section>
     <section class="play">
+        <div class="front">
+            <a href="#"><img src="https://img.icons8.com/?size=100&id=414&format=png&color=FFFFFF" alt=""></a>
+        </div>
         <div class="back">
            <a href="#"><img src="https://img.icons8.com/?size=100&id=9988&format=png&color=FFFFFF" alt=""></a>
         </div>
@@ -43,6 +107,10 @@
         </div>
         <div class="back">
           <a href="#"><img src="https://img.icons8.com/?size=100&id=9991&format=png&color=FFFFFF" alt=""></a>
+        </div>
+        <div class="front">
+            <a href="#"><img src="https://img.icons8.com/?size=100&id=61873&format=png&color=FFFFFF" alt=""></a>
+        </div>
     </section>
 </body>
 </html>
