--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
           <a href="#"><img src="https://img.icons8.com/?size=100&id=9991&format=png&color=FFFFFF" alt=""></a>
         </div>
         <div class="front">
-            <a href="#"><img src="https://img.icons8.com/?size=100&id=61873&format=png&color=FFFFFF" alt=""></a>
+            <a href="#"><img src="https://img.icons8.com/?size=100&id=61873&format=png&color=FFFFFF" alt="" onclick="toogleMenu()"></a>
         </div>
     </section>
+    <script src="move.js"></script>
 </body>
 </html>
