--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#">PLAYING NOW</a>
             </div>
             <div class="last-one">
-                <a href="#"><img src="https://img.icons8.com/?size=100&id=120374&format=png&color=FFFFFF" alt=""></a>
+                <a href="list.html"><img src="https://img.icons8.com/?size=100&id=120374&format=png&color=FFFFFF" alt=""></a>
             </div>
         </nav>
     </header>
